fix button color and alignment on phone

--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ option:hover {
 .playerX,
 .playerO {
     padding: .5em 6em;
-    width: 200px;
+    width: 230px;
     border-radius: 1em;
     border: 2px solid rgb(210, 210, 210);
     background-color: none;
@@ -219,6 +219,11 @@ option:hover {
     .player {
         flex-direction: column;
         align-items: center;
+    }
+
+    .playerX,
+    .playerO {
+        width: 80%;
     }
 }
 
